--- a/NPC_FLIP_simulations.Rmd
+++ b/NPC_FLIP_simulations.Rmd
@@ -539,25 +539,37 @@ def get_ts_with_parameters(MW= 27,
                       NLS_strength= 0, 
                       is_force= False, 
                       **kwargs):
-    ts = TransportSimulation(**kwargs)
-    ts.set_v_N_L(627e-15, True)
-    ts.set_v_C_L(2194e-15, True)
-    if is_force and False:
-        ts.set_v_N_L(762e-15, False)
-        ts.set_v_C_L(4768e-15, False)
+    if is_force:
+        v_N_L=762e-15
+        v_C_L=4768e-15
+    else:
+        v_N_L=627e-15
+        v_C_L=2194e-15    
+    ts= transport_simulation.TransportSimulation(v_N_L= v_N_L,
+                                                v_C_L= v_C_L)
+    ts.set_time_step(0.2e-3)
     ts.set_NPC_dock_sites(n_NPCs= 2000, 
                         n_dock_sites_per_NPC= 500)
+    ts.fraction_complex_NPC_to_free_N_per_M_GTP_per_sec = 1.0e+6 # TODO: this is doubled relative to complex_N to free_N
+    ts.fraction_complex_N_to_free_N_per_M_GTP_per_sec = 1.0e+6
+    ts.rate_complex_to_NPC_per_free_site_per_sec_per_M= 50e+6
+    ts.fraction_complex_NPC_to_complex_N_C_per_sec= 1000.0 # Leakage parameter
+    ts.rate_GDP_N_to_GTP_N_per_sec= 1000.0
+    ts.rate_GTP_N_to_GDP_N_per_sec= 0.2
+    ts.rate_GTP_C_to_GDP_C_per_sec= 500.0
+    ts.rate_GTP_N_to_GTP_C_per_sec = 0.5
+    ts.rate_GDP_C_to_GDP_N_per_sec = 1.0
+    ts.rate_GDP_N_to_GDP_C_per_sec = 1.0 
+    ts.rate_complex_to_free_per_sec = 0.05
+    #
     ts.set_passive_nuclear_molar_rate_per_sec(
         get_passive_nuclear_molar_rate_per_sec(MW, is_force))
     ts.set_params(rate_free_to_complex_per_sec= 
                   get_free_to_complex_rate(NLS_strength))
     ts.set_params(fraction_complex_NPC_traverse_per_sec=
                   get_fraction_complex_NPC_traverse_per_sec(MW, is_force))
-    ts.fraction_complex_NPC_to_free_N_per_M_GTP_per_sec = 0.5e+6 # TODO: this is doubled relative to complex_N to free_N
-    ts.fraction_complex_N_to_free_N_per_M_GTP_per_sec = 0.5e+6
-    ##
-    ts.rate_complex_to_NPC_per_free_site_per_sec_per_M= 0.5e+6
-    ts.fraction_complex_NPC_to_complex_N_C_per_sec= 100.0 # Leakage parameter
+    #
+    ts.set_params(**kwargs) # override defaults
     return ts
 
 def get_free_to_complex_rate(NLS_strength):
@@ -578,10 +590,10 @@ def get_free_to_complex_rate(NLS_strength):
 
 def get_passive_nuclear_molar_rate_per_sec(MW, is_force): # TODO: verify it corresponds to multiplyng by concentration rather than nmolecules
     #TODO: generalize this - either from the literature or regression
-    base_rates={ 27:0.07624291, 
-                41:0.0560286, 
-                54:0.03452787, 
-                67:0.03022162 }
+    base_rates={ 27:0.0805618, 
+                41:0.06022355, 
+                54:0.03301662, 
+                67:0.0287649 }
     rate= base_rates[MW]
     if is_force:
         rate += get_force_effect_on_diffusion(MW)
@@ -591,18 +603,18 @@ def get_force_effect_on_diffusion(MW):
     """
     The effect of force on passive diffusion as measured by experiment
     """
-    effects = {27:0.08698999,
-               41:0.03395035,
-               54:-0.00019152,
-               67:0.00177338}
+    effects = {27:0.08214946, 
+                41:0.03027974, 
+                54:0.00026308, 
+                67:0.00272423 }
     return effects[MW]
 
 def get_fraction_complex_NPC_traverse_per_sec(MW, is_force):
     s= 10.0
-    rate= { 27: [s*2.0,  s*5.0],
-            41: [s*2.0,  s*5.5],
-            54: [s*1.5, s*4.5],
-            67: [s*2.0,  s*4.0] }
+    rate= { 27: [s*1.0,  s*2.0],
+            41: [s*1.0,  s*2.0],
+            54: [s*1.0, s*2.0],
+            67: [s*1.0,  s*2.0] }
     i_force= 1 if is_force else 0
     return rate[MW][i_force]
 
@@ -663,12 +675,13 @@ def get_N_C_ratio_stats(ts,
 import matplotlib.pyplot as plt
 import multiprocessing
 
-n_processors= 5
+
 
 def do_simulate(ts, simulation_time_sec):
     return ts.simulate(simulation_time_sec)
 
-def get_MW_stats_list_by_force(MW, simulation_time_sec):
+def get_MW_stats_list_by_force(MW, simulation_time_sec,
+                              n_processors):
     assert(MW in [27,41, 54, 67])
     stats_list_by_force= {}
     TSs_by_force= {}
@@ -678,7 +691,6 @@ def get_MW_stats_list_by_force(MW, simulation_time_sec):
             ts = get_ts_with_parameters(MW= MW,
                                     NLS_strength=i_NLS,
                                   is_force= is_force)
-            ts.set_params(dt_sec=1.0e-3)
             TS_tuples.append((ts, simulation_time_sec))
         pool= multiprocessing.Pool(processes= n_processors)
         stats_list_by_force[is_force]= pool.starmap(do_simulate,
@@ -688,16 +700,6 @@ def get_MW_stats_list_by_force(MW, simulation_time_sec):
     return (stats_list_by_force, TSs_by_force)
 
 
-```
-
-```{python}
-##### TIME CONSUMING #####$
-simulation_time_sec= 60
-MW_to_stats_list_by_force= {}            
-for MW in [27, 41, 54, 67]:
-    print(MW)
-    MW_to_stats_list_by_force[MW]= get_MW_stats_list_by_force(MW, simulation_time_sec)
-  
 ```
 
 ```{python}
@@ -790,18 +792,31 @@ def plot_MW_stats_list(stats_list_by_force, TSs_by_force):
     lh.set_title('NLS strength')
 
         
+
+```
+
+```{python}
+##### TIME CONSUMING #####$
+simulation_time_sec= 40.0
+n_processors= 8
+MW_to_stats_list_by_force= {}            
+for MW in [27, 41, 54, 67]:
+    print(MW)
+    MW_to_stats_list_by_force[MW]= get_MW_stats_list_by_force(MW, simulation_time_sec,
+                                                             n_processors= n_processors)
+    plot_MW_stats_list(*MW_to_stats_list_by_force[MW])
+    plt.show()  
+```
+
+```{python}
+
+```
+
+```{python}
 for MW in [27, 41, 54, 67]:
     print(MW)
     plot_MW_stats_list(*MW_to_stats_list_by_force[MW])
     plt.show()
-```
-
-```{python}
-
-```
-
-```{python}
-
 ```
 
 ```{python}
