--- a/NPC_FLIP_simulations.Rmd
+++ b/NPC_FLIP_simulations.Rmd
@@ -385,7 +385,7 @@ def get_transport_simulation_by_passive(passive_nuclear_molar_rate_per_sec,
     ts.fraction_complex_NPC_to_free_N_per_M_GTP_per_sec = 1.0e+6 # TODO: this is doubled relative to complex_N to free_N
     ts.fraction_complex_N_to_free_N_per_M_GTP_per_sec = 1.0e+6
     ts.rate_complex_to_NPC_per_free_site_per_sec_per_M= 50e+6
-    ts.fraction_complex_NPC_to_complex_N_C_per_sec= 1000.0 # Leakage parameter
+    ts.fraction_complex_NPC_to_complex_N_C_per_sec= 3000.0 # Leakage parameter
     ts.rate_GDP_N_to_GTP_N_per_sec= 1000.0
     ts.rate_GTP_N_to_GDP_N_per_sec= 0.2
     ts.rate_GTP_C_to_GDP_C_per_sec= 500.0
@@ -510,8 +510,8 @@ for passive in np.logspace(np.log10(0.01), np.log10(0.2), 12): #0.01,0.09,6):
 ```{python}
 keys= sorted(stats_grids_traverse_by_passive_force.keys(), key=lambda x: (x[0],x[1]))
 for key in keys:
-#    if key[1]:
-#        continue
+    if key[1]:
+        continue
     print(f"passive rate {key[0]} is force {key[1]}")
     plot_stats_grids(stats_grids_traverse_by_passive_force[key],
                     ts_traverse_by_passive_force[key],
@@ -547,13 +547,13 @@ def get_ts_with_parameters(MW= 27,
         v_C_L=2194e-15    
     ts= transport_simulation.TransportSimulation(v_N_L= v_N_L,
                                                 v_C_L= v_C_L)
-    ts.set_time_step(0.2e-3)
+    ts.set_time_step(0.1e-3)
     ts.set_NPC_dock_sites(n_NPCs= 2000, 
                         n_dock_sites_per_NPC= 500)
     ts.fraction_complex_NPC_to_free_N_per_M_GTP_per_sec = 1.0e+6 # TODO: this is doubled relative to complex_N to free_N
     ts.fraction_complex_N_to_free_N_per_M_GTP_per_sec = 1.0e+6
     ts.rate_complex_to_NPC_per_free_site_per_sec_per_M= 50e+6
-    ts.fraction_complex_NPC_to_complex_N_C_per_sec= 1000.0 # Leakage parameter
+    ts.fraction_complex_NPC_to_complex_N_C_per_sec= 3000.0 # Leakage parameter
     ts.rate_GDP_N_to_GTP_N_per_sec= 1000.0
     ts.rate_GTP_N_to_GDP_N_per_sec= 0.2
     ts.rate_GTP_C_to_GDP_C_per_sec= 500.0
@@ -610,11 +610,11 @@ def get_force_effect_on_diffusion(MW):
     return effects[MW]
 
 def get_fraction_complex_NPC_traverse_per_sec(MW, is_force):
-    s= 10.0
-    rate= { 27: [s*1.0,  s*2.0],
-            41: [s*1.0,  s*2.0],
-            54: [s*1.0, s*2.0],
-            67: [s*1.0,  s*2.0] }
+    s= 20.0
+    rate= { 27: [s*3.0,  s*10.0],
+            41: [s*3.0,  s*10.0],
+            54: [s*3.0, s*10.0],
+            67: [s*3.0,  s*10.0] }
     i_force= 1 if is_force else 0
     return rate[MW][i_force]
 
@@ -798,7 +798,7 @@ def plot_MW_stats_list(stats_list_by_force, TSs_by_force):
 ```{python}
 ##### TIME CONSUMING #####$
 simulation_time_sec= 40.0
-n_processors= 8
+n_processors= 6
 MW_to_stats_list_by_force= {}            
 for MW in [27, 41, 54, 67]:
     print(MW)
