--- a/NPC_FLIP_simulations.Rmd
+++ b/NPC_FLIP_simulations.Rmd
@@ -355,6 +355,7 @@ import numpy as np
 import multiprocessing
 importlib.reload(map_param_grid)
 importlib.reload(transport_simulation)
+
 ```
 
 ```{python}
@@ -655,6 +656,182 @@ with open(f"./Results/Heatmaps_Ran{(1E6*Ran_cell_M):.0f}uM.pkl","wb") as F:
         [stats_grids_traverse_by_passive_force, ts_traverse_by_passive_force],
                  F)
 # !ls Results
+```
+
+## Run 03 on cluster (~/raveh_lab/Projects/npctransport_kinetics/run03/)
+
+```{python}
+import pickle
+import numpy as np
+import pandas as pd
+import map_param_grid as mpg
+import importlib
+importlib.reload(map_param_grid)
+
+with open("run03/run03.pkl","rb") as F:
+    stats_grids_by_passive, ts_by_passive = pickle.load(F)
+param_range = {'tag_x': 'fraction_complex_NPC_traverse_per_sec', 
+ 'range_x': np.array([   1.        ,    1.24093776,    1.53992653,    1.91095297,
+          2.37137371,    2.94272718,    3.65174127,    4.53158364,
+          5.62341325,    6.97830585,    8.65964323,   10.74607828,
+         13.33521432,   16.548171  ,   20.53525026,   25.48296748,
+         31.6227766 ,   39.24189758,   48.69675252,   60.42963902,
+         74.98942093,   93.05720409,  115.47819847,  143.30125702,
+        177.827941  ,  220.67340691,  273.84196343,  339.82083289,
+        421.69650343,  523.29911468,  649.38163158,  805.84218776,
+       1000.        ]), 
+ 'pretty_x': 
+ 'rate NPC traverse [$sec^{-1}$]', 
+ 'tag_y': 'rate_free_to_complex_per_sec', 
+ 'range_y': np.array([1.00000000e-03, 1.30494682e-03, 1.70288620e-03, 2.22217592e-03,
+       2.89982140e-03, 3.78411271e-03, 4.93806584e-03, 6.44391330e-03,
+       8.40896415e-03, 1.09732510e-02, 1.43195090e-02, 1.86861977e-02,
+       2.43844942e-02, 3.18204681e-02, 4.15240186e-02, 5.41866359e-02,
+       7.07106781e-02, 9.22736744e-02, 1.20412238e-01, 1.57131566e-01,
+       2.05048338e-01, 2.67577176e-01, 3.49173984e-01, 4.55653479e-01,
+       5.94603558e-01, 7.75926020e-01, 1.01254219e+00, 1.32131371e+00,
+       1.72424412e+00, 2.25004688e+00, 2.93619151e+00, 3.83157377e+00,
+       5.00000000e+00]), 
+  'pretty_y': 'NTR $k_{on}$ [$sec^{-1}$]'}       
+
+print([f'{state}{label}_N' for state in ['free','complex'] for label in ['L','U']])
+
+
+```
+
+```{python}
+import seaborn as sns
+import matplotlib as mpl
+import matplotlib.pyplot as plt
+pd.set_option("display.max_columns", None)
+df = mpg.get_df_from_stats_grids_by_passive \
+    (param_range, stats_grids_by_passive, ts_by_passive)
+display(df.head())
+```
+
+```{python}
+###### VISUALIZATION OF RESULTS ######
+
+param_range2 = param_range
+def my_plot_param_grid(df, # a pivoted 2D dataframe
+                       pretty_x = None,
+                       pretty_y = None,
+                       pretty_z = None,
+                       **contourf_kwargs):
+    X, Y = np.meshgrid(df.columns, df.index)
+    ax = plt.gca()
+    c = plt.contourf( X, Y, df.to_numpy(), 
+                **contourf_kwargs)
+    ax.set_xscale('log')
+    ax.set_yscale('log')
+    ax.set_xlabel(pretty_x)
+    ax.set_ylabel(pretty_y)
+    xlim= ax.get_xlim()
+    ylim= ax.get_ylim()
+    if xlim[1]>xlim[0]:
+        ax.set_xlim(xlim[1], xlim[0])
+#    cb = plt.colorbar(label= pretty_z)
+#    ticks = cb.get_ticks()
+#    cb.set_ticks(ticks)
+#    cb.set_ticklabels(["{:.2f}".format(tick) for tick in ticks])
+    return c
+
+plt.style.use('./my.mplstyle.txt')
+NLSs = df['rate_free_to_complex_per_sec'].unique()
+ncol = 5
+nrow = len(NLSs) // ncol + (len(NLSs) % ncol > 0) * 1
+fig,axes = plt.subplots(nrow, ncol,
+                        sharex=True, 
+                        sharey=True, 
+                        squeeze=False, 
+                        figsize = (19,24))
+axes_iter = iter(axes.reshape(-1))
+for NLS in NLSs:
+    ax = next(axes_iter)
+    is_NLS = np.isclose(df['rate_free_to_complex_per_sec'], NLS)
+    N2C = df[is_NLS].pivot(index='passive_rate', 
+                               columns='fraction_complex_NPC_traverse_per_sec', 
+                               values='N2C')
+    NC_min = 1.0
+    NC_max = 30.0
+    plt.sca(ax)
+    ct = my_plot_param_grid(N2C,
+                       pretty_x = r'rate NPC traverse [$sec^{-1}$]',
+                       pretty_y = r'passive rate [$sec^{-1}$]',
+                       pretty_z = r'N:C',
+                      vmin= NC_min,
+                      vmax= NC_max,
+                      levels= np.logspace(np.log2(NC_min),np.log2(NC_max),21, base=2.0),
+                                  locator= mpl.ticker.LogLocator(base=2.0),
+                      extend = 'both')
+    plt.title(f"NLS $k_{{on}}${NLS:.4f} $sec^{{-1}}$")
+fig.subplots_adjust(right=0.8)
+cbar_ax = fig.add_axes([0.85, 0.3, 0.03, 0.4])
+cb = fig.colorbar(ct, cax=cbar_ax)
+ticks = cb.get_ticks()
+cb.set_ticks(ticks)
+cb.set_ticklabels(["{:.2f}".format(tick) for tick in ticks])
+
+plt.show()
+```
+
+```{python}
+
+```
+
+```{python}
+
+```
+
+```{python}
+
+```
+
+```{python}
+import map_param_gridaram_grid
+def get_dLogRatios_by_passive(stats_grids_by_passive, ts_by_passive):
+    dRatios_by_passive = {}
+    keys= sorted(stats_grids_by_passive.keys())
+    for key0, key1 in zip(keys[:-1],keys[1:]):
+        stats_grids = [stats_grids_by_passive[key0], 
+                       stats_grids_by_passive[key1]]
+        ts = [ts_by_passive[key0], 
+              ts_by_passive[key1]]
+        v_N_L= ts[0].get_v_N_L() 
+        v_C_L= ts[0].get_v_C_L()
+        assert(v_N_L == ts[1].get_v_N_L() )
+        assert(v_C_L == ts[1].get_v_C_L() ) 
+        ratios0 = map_param_grid.get_N_to_C_ratios(stats_grids[0], 
+                              v_N_L, v_C_L)
+        ratios1 = map_param_grid.get_N_to_C_ratios(stats_grids[1], 
+                              v_N_L, v_C_L)
+        dRatios_by_passive[key0] = np.log(ratios1) - np.log(ratios0);
+    return dRatios_by_passive
+
+dRatios_by_passive = get_dLogRatios_by_passive(stats_grids_by_passive, ts_by_passive)
+for key in sorted(stats_grids_by_passive.keys())[:-1]:
+    print(key)
+    mpg.plot_param_grid(param_range, 
+                        dRatios_by_passive[key],
+                      Z_label= "dN/C log ratio",
+                      vmin=-4.0,
+                      vmax= 1.0,
+                      levels=np.linspace(-4.0, 1.0, 21),
+                      extend='both')
+    plt.show()
+```
+
+```{python}
+
+keys= sorted(stats_grids_traverse_by_passive_force.keys())
+for key in keys:
+    print(f"passive rate {key}")
+    plot_stats_grids(stats_grids_traverse_by_passive_force[key],
+                    ts_traverse_by_passive_force[key],
+                    vmax_import_export= 10.0,
+                     NC_max=30.0,
+                    NC_min=1.0)
+    
 ```
 
 # Map NLS strength, MW size, force
